--- a/TestWebAppProject/appsettings.Development.json
+++ b/TestWebAppProject/appsettings.Development.json
@@ -2,7 +2,7 @@
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Debug",
+      "Default": "Debugggg",
       "System": "Information",
       "Microsoft": "Information"
     }
