--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,6 @@
 version: 1.0.{build}
 image: Visual Studio 2017
+before_build: nuget restore
 build_script:
 - ps: >-
     msbuild TestWebAppProject.sln --% /bl:output.binlog /verbosity:minimal
