--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,10 +7,9 @@ build_script:
 artifacts:
 - path: output.binlog
   type: File
+install:
+- choco install --no-progress BCC-MSBuildLog
+- choco install --no-progress BCC-Submission  
 on_finish:
-- ps: >-
-    if(-not $env:APPVEYOR_PULL_REQUEST_NUMBER)
-    {
-        Import-Module .\tools\MSBuildLogOctokitChecker.psm1
-        Send-MsbuildLogAppveyor -Path output.binlog -Token $env:MSBLOC_JWT
-    }
+- IF NOT "%BCC_TOKEN%x"=="x" BCCMSBuildLog --cloneRoot "%APPVEYOR_BUILD_FOLDER%" --input output.binlog --output checkrun.json --ownerRepo %APPVEYOR_REPO_NAME% --hash %APPVEYOR_REPO_COMMIT%
+- IF NOT "%BCC_TOKEN%x"=="x" BCCSubmission -h %APPVEYOR_REPO_COMMIT% -i checkrun.json -t %BCC_TOKEN%
