--- a/TestWebAppProject/bower.json
+++ b/TestWebAppProject/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "asp.net",
-  "private": false,
+  "private": true,
   "dependencies": {
     "bootstrap": "3.3.7",
     "jquery": "2.2.0",
