--- a/UnitTestProject3/UnitTestProject3/UnitTestProject3.csproj
+++ b/UnitTestProject3/UnitTestProject3/UnitTestProject3.csproj
@@ -45,9 +45,7 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
-          <Private>False</Private>
-        </Reference>
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
       </ItemGroup>
     </Otherwise>
   </Choose>
