--- a/UnitTestProject3/UnitTestProject3/UnitTestProject3.csproj
+++ b/UnitTestProject3/UnitTestProject3/UnitTestProject3.csproj
@@ -50,7 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="tests\UnitTest1.cs" />
+    <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Choose>
