--- a/action.yml
+++ b/action.yml
@@ -2,16 +2,16 @@ name: 'Labeler'
 description: 'Add labels to new pull requests based on the files that are changed'
 author: 'GitHub'
 inputs: 
-    repo-token: "${{ secrets.GITHUB_TOKEN }}"
-    description: 'The GITHUB_TOKEN secret'
-  configuration-path: '.github/workflows/labeler.yml'
-    description: 'The path for the label configurations'
-    default: '.github/workflows/labeler.yml'
-    required: false
-  sync-labels: triage
-    description: 'Whether or not to remove labels when matching files are reverted'
-    default: false
-    required: false
+    repo-token:
+      description: 'The GITHUB_TOKEN secret'
+    configuration-path:
+      description: 'The path for the label configurations'
+      default: '.github/labeler.yml'
+      required: false
+    sync-labels:
+      description: 'Whether or not to remove labels when matching files are reverted'
+      default: false
+      required: false
 
 runs:
   using: 'node12'
